# TermokitDeliveryBot

./: .gitignore  README.md
termokitdeliverybot/: .env.example  LICENSE  Makefile  Pipfile  __init__.py  bot.py  pyproject.toml
termokitdeliverybot/commands/: driver_command.py
termokitdeliverybot/config_data/: config.py
termokitdeliverybot/external_services/: delivery_api.py
termokitdeliverybot/filters/: callbackdata.py
termokitdeliverybot/handlers/: api_error.py  not_authorized.py  order.py  user_handlers.py
termokitdeliverybot/keyboards/: keyboard.py  set_menu.py
termokitdeliverybot/lexicon/: lexicon_en.py
termokitdeliverybot/models/: db.py
termokitdeliverybot/tests/: tests.py
